fix: add overflow to body

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,9 +32,10 @@
 
 html,
 body {
+  overflow: auto;
   width: 100%;
   height: 100%;
-  background: hsl(var(--b3))
+  background: hsl(var(--b3));
 }
 
 body {
